# Code-of-learning-fishbot

./: .gitignore  README.md
example_imu/: platformio.ini
example_imu/lib/MPU6050_light/examples/GetAllData/: GetAllData.ino
example_imu/lib/MPU6050_light/src/: MPU6050_light.cpp  MPU6050_light.h
example_imu/src/: main.cpp
example_led/: platformio.ini
example_led/src/: main.cpp
example_project/src/: main.cpp
example_ultrasound/lib/PidController/: PidController.h
example_ultrasound/src/: main.cpp
fishbot_motion_control/: platformio.ini
fishbot_motion_control/lib/Kinematics/: Kinematics.cpp  Kinematics.h
fishbot_motion_control/lib/PidController/: PidController.cpp  PidController.h.bak  deepseek修改i.cpp.bak  deepseek修改i.h.bak
fishbot_motion_control/src/: Readme  main.cpp  main.cpp.bak
fishbot_ws/install/: local_setup.sh  setup.sh
fishbot_ws/install/fishbot_bringup/lib/fishbot_bringup/: odom2tf
fishbot_ws/install/fishbot_bringup/share/fishbot_bringup/: package.ps1  package.sh
fishbot_ws/install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.2
fishbot_ws/install/micro_ros_msgs/share/micro_ros_msgs/rust/: Cargo.toml
fishbot_ws/install/micro_ros_msgs/share/micro_ros_msgs/rust/src/: msg.rs
fishbot_ws/install/micro_ros_msgs/share/micro_ros_msgs/rust/src/msg/: rmw.rs
fishbot_ws/src/fishbot_bringup/: CMakeLists.txt
fishbot_ws/src/fishbot_description/: CMakeLists.txt
fishbot_ws/src/fishbot_navigation2/: package.xml
fishbot_ws/src/fishbot_navigation2/maps/: room.pgm  room.yaml
fishbot_ws/src/install/: local_setup.sh  setup.sh
(+41 files in other folders)
